Uploaded updated tex files

--- a/engineering-notes/main.tex
+++ b/engineering-notes/main.tex
@@ -46,23 +46,11 @@
 
 \tableofcontents
 
-%% header:
-
-%
-%\begin{center}
-%    Notes from \textbf{SUBJECT ###: Course Title}
-%
-%    taught at University of Michigan, [FALL/WINTER] YEAR
-%
-%    using \textit{Textbook Title}, by Textbook Author(s)
-%\end{center}
-%
-%
-
-
 \include{1 Thermodynamics}
 \include{2 Statics}
 \include{3 Dynamics and Vibrations}
 \include{4 Design and Manufacturing}
+\include{5 Fluid Mechanics}
+\include{6 Mechanical Behavior of Materials}
 
 \end{document}
